# src/controllers/orders.controller.ts
@@ -1,13 +1,41 @@
+/**
+ * src/controllers/orders.controller.ts
+ */
+
 import { Request, Response } from "express";
 import { create, findAll, findOne } from "../services/order.service";
 import { IPaginationQuery } from "../utils/interfaces";
 import ProductsModel from "../models/products.model";
 import mongoose, { Types } from "mongoose";
+import sendOrderSuccessEmail from "../utils/mail";
+import { IRequestWithUser } from "../middlewares/auth.middleware";
+import UserModel from "../models/user.model";
 
 export default {
-  async create(req: Request, res: Response) {
+  async create(req: IRequestWithUser, res: Response) {
+    /**
+      #swagger.tags = ['Orders']
+      #swagger.security = [{
+      "bearerAuth": []
+      }]
+      #swagger.requestBody = {
+        required: true,
+        schema: {
+          $ref: "#/components/schemas/OrderCreateRequest"
+        }
+      }
+     */
     try {
       const orderData = req.body;
+      const userId = req.user?.id;
+
+      const user = await UserModel.findById(userId);
+      if (!user) {
+        return res.status(403).json({
+          message: "User not found",
+          data: null,
+        });
+      }
 
       for (const item of orderData.orderItems) {
         const product = await ProductsModel.findById(item.productId);
@@ -29,6 +57,18 @@ export default {
         });
       }
 
+      await sendOrderSuccessEmail.send({
+        to: user.email,
+        subject: "Order Success",
+        content: await sendOrderSuccessEmail.render("order-success.ejs", {
+          username: user.username,
+          orderItems: orderData.orderItems, // Menambahkan orderItems
+          contactEmail: "support@example.com", // Email kontak
+          companyName: "Your Company Name", // Nama perusahaan
+          year: new Date().getFullYear(), // Tahun
+        }),
+      });
+
       res.status(201).json({
         data: order,
         message: "Success create Order",
@@ -43,6 +83,12 @@ export default {
   },
 
   async findAll(req: Request, res: Response) {
+    /**
+      #swagger.tags = ['Orders']
+      #swagger.security = [{
+      "bearerAuth": []
+     }]
+     */
     try {
       const {
         limit = 10,
